--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
             android:name=".MainMenuActivity"
             android:exported="true" />
         <activity
+            android:name=".AddContacts"
+            android:exported="true" />
+        <activity
+            android:name=".Contacts"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
