--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,10 @@
             android:name=".DisplayContactsActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewLocationActivity"
+            android:name=".Locations.ViewLocationActivity"
             android:exported="false" />
         <activity
-            android:name=".LocationsActivity"
+            android:name=".Locations.LocationsActivity"
             android:exported="false" />
         <activity
             android:name=".MainMenuActivity"
