--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.HealthUp"
         tools:targetApi="31">
         <activity
+            android:name=".Locations.EditLocationActivity"
+            android:exported="false" />
+        <activity
             android:name=".Locations.AddLocationActivity"
             android:exported="false" />
         <activity
