--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,18 @@
         android:theme="@style/Theme.HealthUp"
         tools:targetApi="31">
         <activity
+            android:name=".Pills.PillScheduleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Pills.EditPillsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Pills.AddPillsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Pills.DisplayPillsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Locations.EditLocationActivity"
             android:exported="false" />
         <activity
