--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:theme="@style/Theme.HealthUp"
         tools:targetApi="31">
         <activity
+            android:name=".Profile.EditProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Profile.DisplayProfileActivity"
+            android:exported="true" />
+        <activity
             android:name=".Pills.PillScheduleActivity"
             android:exported="false" />
         <activity
