--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthUp"
         tools:targetApi="31">
+
         <activity
             android:name=".Contacts.KeypadActivity"
             android:exported="false" />
@@ -79,6 +80,10 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".AnimationActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -86,6 +91,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
